Azure-Cloud/kubernetes/App2/deploy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app2
  labels:
    app: app2
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app2
  template:
    metadata:
      labels:
        app: app2
    spec:
      nodeSelector:
        nodepool: additional
      containers:
        - name: app2
          image: kanika.azurecr.io/app2:529
          ports:
            - containerPort: 8086
