Azure-Cloud/kubernetes/App2/deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app2-service
  namespace: default
spec:
  selector:
    app: app2
  ports:
    - protocol: TCP
      port: 8086
      targetPort: 8086
