Azure-Cloud/kubernetes/App2/deploy/ingress-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app2-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: app2-service
              port:
                number: 8086

        # - path: /app1
        #   pathType: Prefix
        #   backend:
        #     service:
        #       name: java-np
        #       port:
        #         number: 8087
